# mediapipe-hand-crop-fix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml
data/: .gitignore
data/processed/: test.json  train.json
mediapipe_crop_estimate/: collect_hands.py  estimate_poses.py  evaluate.py  evaluation_utils.py  mediapipe_utils.py  train_dataset.py  train_kan.py  train_mlp.py
mediapipe_crop_estimate/mlp/: center.pt  rotation.pt  size.pt
