[project]
name = "mediapipe-hand-crop-fix"
description = "Code for Optimizing Hand Region Detection in MediaPipe Holistic Full-Body Pose Estimation to Improve Accuracy and Avoid Downstream Errors"
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
]
readme = "README.md"
dependencies = [
    "pose-format",
    "mediapipe",
    "tqdm",
    "opencv-python",
    "pykan"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint"
]

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
good-names = ["i", "f", "x", "y", "p1", "p2"]

[tool.pylint.typecheck]
generated-members = ["cv2.*", "torch.*"]

[tool.setuptools]
packages = [
    "mediapipe_crop_estimate",
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["mediapipe_crop_estimate"]
